--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,12 +32,29 @@
         <activity
             android:name=".signInAndLogin.SigninActivity"
             android:exported="true" >
+
+        </activity>
+
+        <activity
+            android:name=".user.MyProfileActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".user.UpdateProfileActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable">
+        </activity>
+
+
+
+
     </application>
 
 </manifest>
