--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         tools:targetApi="31" >
 
         <activity
-            android:name=".user.MyProfileActivity"
+            android:name=".signInAndLogin.LoginActivity"
             android:exported="true"
             tools:ignore="Instantiatable">
             <intent-filter>
@@ -31,7 +31,7 @@
 
 
         <activity
-            android:name=".signInAndLogin.LoginActivity"
+            android:name=".user.MyProfileActivity"
             android:exported="true"
             tools:ignore="Instantiatable">
             <intent-filter>
@@ -43,16 +43,29 @@
 
         <activity
             android:name=".signInAndLogin.SigninActivity"
-            android:exported="true" >
+            android:exported="true"
+            tools:ignore="Instantiatable">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+
+
 
 
         <activity
             android:name=".user.UpdateProfileActivity"
             android:exported="true"
             tools:ignore="Instantiatable">
+
         </activity>
+
+
+
+
+
 
 
 
