--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,14 @@
         tools:targetApi="31" >
 
         <activity
-            android:name=".signInAndLogin.LoginActivity"
+            android:name=".user.UpdatePasswordActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable">
+
+        </activity>
+
+        <activity
+            android:name=".MainActivity"
             android:exported="true"
             tools:ignore="Instantiatable">
             <intent-filter>
@@ -27,6 +34,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".signInAndLogin.LoginActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable">
         </activity>
 
 
@@ -34,42 +47,18 @@
             android:name=".user.MyProfileActivity"
             android:exported="true"
             tools:ignore="Instantiatable">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
             android:name=".signInAndLogin.SigninActivity"
             android:exported="true"
             tools:ignore="Instantiatable">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-
-
-
 
         <activity
             android:name=".user.UpdateProfileActivity"
             android:exported="true"
             tools:ignore="Instantiatable">
-
         </activity>
-
-
-
-
-
-
-
-
-
     </application>
-
 </manifest>
