update psw work ok, bug in add review

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,9 @@
             android:name=".user.UpdatePasswordActivity"
             android:exported="true"
             tools:ignore="Instantiatable">
-        </activity>
-
+                  </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".review.addReviewActivity"
             android:exported="true"
             tools:ignore="Instantiatable">
             <intent-filter>
@@ -33,6 +32,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable">
+
+
 
         </activity>
 
