--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/five_stars"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/five_stars"
         android:supportsRtl="true"
         android:theme="@style/Theme.HotelreviewFrontend"
         android:usesCleartextTraffic="true"
@@ -36,11 +36,6 @@
             android:name=".user.MyProfileActivity"
             android:exported="true"
             tools:ignore="Instantiatable">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
 
@@ -60,6 +55,11 @@
             android:name=".MainActivity"
             android:exported="true"
             tools:ignore="Instantiatable">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <activity
@@ -80,6 +80,11 @@
 
         <activity
             android:name=".user.UpdateProfileActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable">
+        </activity>
+        <activity
+            android:name=".review.UpdateReviewActivity"
             android:exported="true"
             tools:ignore="Instantiatable">
         </activity>
