--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,30 +19,13 @@
         tools:targetApi="31" >
 
         <activity
-            android:name=".user.UpdatePasswordActivity"
+            android:name=".MainActivity"
             android:exported="true"
             tools:ignore="Instantiatable">
-        </activity>
-
-        <activity
-            android:name=".review.HotelReviewActivity"
-            android:exported="true"
-            tools:ignore="Instantiatable">
-
-        </activity>
-
-
-        <activity
-            android:name=".user.MyProfileActivity"
-            android:exported="true"
-            tools:ignore="Instantiatable">
-
-        </activity>
-
-        <activity
-            android:name=".review.AddReviewActivity"
-            android:exported="true"
-            tools:ignore="Instantiatable">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <activity
@@ -52,28 +35,25 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            tools:ignore="Instantiatable">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        <activity
             android:name=".signInAndLogin.LoginActivity"
             android:exported="true"
             tools:ignore="Instantiatable">
-
         </activity>
-
-
-
 
         <activity
             android:name=".signInAndLogin.SigninActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable">
+        </activity>
+
+        <activity
+            android:name=".user.AdminOnlyActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable">
+        </activity>
+
+        <activity
+            android:name=".user.MyProfileActivity"
             android:exported="true"
             tools:ignore="Instantiatable">
         </activity>
@@ -83,6 +63,25 @@
             android:exported="true"
             tools:ignore="Instantiatable">
         </activity>
+
+        <activity
+            android:name=".user.UpdatePasswordActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable">
+        </activity>
+
+        <activity
+            android:name=".review.HotelReviewActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable">
+        </activity>
+
+        <activity
+            android:name=".review.AddReviewActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable">
+        </activity>
+
         <activity
             android:name=".review.UpdateReviewActivity"
             android:exported="true"
